[package]
name = "renable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "renable"
crate-type = ["staticlib","rlib"]

[dependencies]
libc = "*"
libloading = "*"
rcmd = {path="../cmd"}
rcommon = {path="../common"}
rhelp = {path ="../help"}
