[package]
authors = ["zhanghuanhuan"]
name = "rhelp"
version = "0.0.1"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
nix = "*"
rcommon = {path ="../common"}
fluent = "*"
fluent-bundle = "*"
fluent-resmgr = "*"

[lib]
crate-type = ["staticlib","rlib"]
name = "rhelp"
