[package]
name = "rshift"
version = "0.1.0"
edition = "2018"
authors = ["lvgenggeng"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rshift"
crate-type = ["staticlib","rlib"]


[dependencies]
libc = "*"
nix = "*"
rcommon = {path = "../common"}
rhelp = {path ="../help"}