[package]
authors = ["huanhuanzhang"]
name = "rulimit"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = "*"
libc = "*"
nix = "*"
rcommon = {path = "../common"}
rhelp = {path ="../help"}

[lib]
crate-type = ["staticlib","rlib"]
name = "rulimit"
